--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/leaflet": "^1.9.16",
     "firebase": "^11.4.0",
     "leaflet": "^1.9.4",
+    "luxon": "^3.6.1",
     "next": "^15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
