--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-config-next": "15.1.7",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-next": "^0.0.0",
+    "ignore-loader": "^0.1.2",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
