--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,5 +24,5 @@
     "baseUrl": "."
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/**/*"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "fb_functions/**/*"]
 }
