--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "leaflet": "^1.9.4",
     "luxon": "^3.6.1",
     "next": "^15.1.7",
+    "node-geocoder": "^4.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
