--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "next": "^15.1.7",
     "node-geocoder": "^4.2.0",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
+    "react-circular-progressbar": "^2.2.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
@@ -30,6 +32,7 @@
     "@types/luxon": "^3.4.0",
     "@types/node": "^20",
     "@types/react": "^19",
+    "@types/react-chartjs-2": "^2.0.2",
     "@types/react-dom": "^19",
     "@types/string-similarity": "^4.0.2",
     "autoprefixer": "^10.4.21",
