--- a/package.json
+++ b/package.json
@@ -12,16 +12,17 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@google-cloud/storage": "^7.16.0",
     "@google/generative-ai": "^0.24.0",
     "@react-google-maps/api": "^2.20.6",
     "@types/leaflet": "^1.9.16",
+    "dotenv": "^16.5.0",
     "firebase": "^11.4.0",
     "leaflet": "^1.9.4",
     "luxon": "^3.6.1",
     "next": "^15.1.7",
     "node-geocoder": "^4.2.0",
     "react": "^19.0.0",
-    "react-chartjs-2": "^5.3.0",
     "react-circular-progressbar": "^2.2.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
@@ -33,7 +34,6 @@
     "@types/luxon": "^3.4.0",
     "@types/node": "^20",
     "@types/react": "^19",
-    "@types/react-chartjs-2": "^2.0.2",
     "@types/react-dom": "^19",
     "@types/string-similarity": "^4.0.2",
     "autoprefixer": "^10.4.21",
