--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/leaflet": "^1.9.16",
     "dotenv": "^16.5.0",
     "firebase": "^11.4.0",
+    "firebase-admin": "^13.3.0",
     "leaflet": "^1.9.4",
     "luxon": "^3.6.1",
     "next": "^15.1.7",
