--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@google/generative-ai": "^0.24.0",
     "@react-google-maps/api": "^2.20.6",
     "@types/leaflet": "^1.9.16",
+    "chart.js": "^4.4.9",
     "dotenv": "^16.5.0",
     "firebase": "^11.4.0",
     "firebase-admin": "^13.3.0",
@@ -24,6 +25,7 @@
     "next": "^15.1.7",
     "node-geocoder": "^4.2.0",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-circular-progressbar": "^2.2.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
@@ -32,6 +34,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/chart.js": "^2.9.41",
     "@types/luxon": "^3.4.0",
     "@types/node": "^20",
     "@types/react": "^19",
