--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "leaflet": "^1.9.4",
     "luxon": "^3.6.1",
     "next": "^15.1.7",
+    "next-auth": "^4.24.11",
     "node-geocoder": "^4.2.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
