--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -1,15 +1,20 @@
 {
   "compilerOptions": {
-    "module": "NodeNext",
+    "module": "commonjs",
     "esModuleInterop": true,
-    "moduleResolution": "nodenext",
+    "moduleResolution": "node",
     "noImplicitReturns": true,
     "noUnusedLocals": true,
     "outDir": "lib",
     "skipLibCheck": true, 
     "sourceMap": true,
     "strict": true,
-    "target": "es2017"
+    "target": "es2017",
+    "resolveJsonModule": true,
+    "baseUrl": ".",
+    "paths": {
+      "*": ["node_modules/*"]
+    }
   },
   "compileOnSave": true,
   "include": [
@@ -17,6 +22,6 @@
   ],
   "exclude": [
     "node_modules",
-    "lib",
+    "lib"
   ]
 }
