--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.5.0",
     "firebase": "^11.4.0",
     "firebase-admin": "^13.3.0",
+    "framer-motion": "^12.12.2",
     "leaflet": "^1.9.4",
     "luxon": "^3.6.1",
     "next": "^15.1.7",
